# rupee

./: README.md  Setup.hs  TODO  rupee.cabal  test.rb
Foreign/: Rupee.hs
Foreign/Rupee/: Builtins.hs  CAPI.hsc  Types.hsc
cbits/: ffi.h  shim.c  shim.h
demo/: demo.hs
